# dealbreaker-ma-agent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  replay.json
app/: agent.py
app/agents/: financial.py  investigation.py  legal.py  market.py  news_sentiment.py  people_culture.py  reporter.py  risk.py
app/plugins/: audit_plugin.py  guardrails_plugin.py  pii_plugin.py
app/schemas/: __init__.py  models.py
app/tools/: __init__.py  financial_tools.py  legal_tools.py  market_tools.py  news_sentiment_tools.py  people_culture_tools.py  report_tools.py
mcp_servers/legal_db_server/: server.py
mcp_servers/sec_edgar_server/: requirements.txt  server.py
notebooks/: dealbreaker_demo.ipynb
tests/eval/: eval_config.yaml
tests/eval/datasets/: financial_eval.json  legal_eval.json
